--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-no-javascript-utils": "^0.5.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
+    "gatsby-plugin-sass": "^2.5.1",
     "inter-ui": "^3.15.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
