--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@emotion/react": "^11.0.0",
     "gatsby": "^2.25.3",
     "gatsby-plugin-emotion": "^4.4.0",
+    "gatsby-plugin-manifest": "^2.6.0",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-no-javascript-utils": "^0.5.0",
+    "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sass": "^2.5.1",
     "inter-ui": "^3.15.0",
