--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-putout": "^6.2.0",
     "eslint-plugin-react": "^7.21.5",
+    "node-sass": "^4.14.1",
     "prettier": "2.1.2",
     "standard": "^16.0.2",
     "stylelint": "^10.1.0",
